@@ -754,14 +754,6 @@ class Preferences {
 			'section' => 'editing/advancedediting',
 			'label-message' => 'tog-previewonfirst',
 		);
-
-		if ( $wgAllowUserCssPrefs ) {
-			$defaultPreferences['editsection'] = array(
-				'type' => 'toggle',
-				'section' => 'editing/advancedediting',
-				'label-message' => 'tog-editsection',
-			);
-		}
 		$defaultPreferences['editsectiononrightclick'] = array(
 			'type' => 'toggle',
 			'section' => 'editing/advancedediting',
